--- a/style.css
+++ b/style.css
@@ -1,3 +1,247 @@
-all {
-    color: black;
+@font-face {
+  font-family: Norse-Bold;
+  src: url("./assets/Norse-Bold.otf");
+}
+
+@font-face {
+  font-family: Inter;
+  src: url("./assets/Inter-Medium.ttf");
+}
+
+@font-face {
+  font-family: Inter-Bold;
+  src: url("./assets/Inter-Bold.ttf");
+}
+
+body {
+  cursor: auto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #333333;
+  background-image: url(https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: repeat-x;
+  background-size: contain;
+  height: 100vh;
+  backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
+}
+
+main {
+  display: grid;
+  justify-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+section {
+  display: grid;
+  grid-template-columns: 33rem auto;
+  width: 80%;
+  height: 100vh;
+  background-color: white;
+}
+
+.img {
+  background-image: url(https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  height: 100vh;
+}
+
+.img {
+  cursor: default;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.img-shadow {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 15px;
+  align-items: center;
+  width: 100%;
+
+  padding-top: 250px;
+}
+
+.img::before {
+  content: "";
+  position: absolute;
+  width: 33rem;
+  height: 100%;
+  opacity: 1;
+  backdrop-filter: blur(8rem);
+  -webkit-backdrop-filter: blur(8rem);
+  mask: linear-gradient(black 20%, transparent 300%);
+}
+
+.img-shadow img {
+  justify-self: end;
+  width: 5rem;
+  z-index: 6;
+}
+
+.img-shadow span {
+  text-align: center;
+  margin: 0;
+  padding-top: 1.6rem;
+  color: white;
+  justify-self: start;
+  font-family: Norse-Bold;
+  font-size: 6rem;
+  line-height: 0;
+  z-index: 6;
+}
+
+.content {
+  display: grid;
+  grid-template-rows: 1fr auto 0.75fr;
+}
+
+.description {
+  display: flex;
+  padding: 3.5rem 10rem 2rem 3.5rem;
+  align-items: end;
+  background-color: rgba(0, 0, 0, 0.025);
+  height: 100%;
+  font-size: 1.3rem;
+  font-family: Inter;
+  letter-spacing: -0.05rem;
+  margin: 0;
+}
+
+.bold-desc {
+  font-family: Inter-Bold;
+}
+
+.signup {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.signup h1 {
+  margin-left: 3.5rem;
+  margin-bottom: 0;
+  margin: 2rem 3.5rem 0rem 3.5rem;
+  font-family: Inter-Bold;
+  font-weight: normal;
+  letter-spacing: -0.05rem;
+  font-size: 1.3rem;
+}
+
+.signup form {
+  padding: 2.5rem 15rem 4rem 3.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-column-gap: 3rem;
+  grid-row-gap: 3rem;
+}
+
+.signup form div {
+  position: relative;
+}
+
+input {
+  height: 3rem;
+  width: 100%;
+  border-radius: 5px;
+  border: transparent 2px solid;
+  background-color: rgba(0, 0, 0, 0.025);
+  padding: 0rem 1rem 0rem 0.5rem;
+}
+
+label {
+  position: absolute;
+  pointer-events: none;
+  z-index: 3;
+  top: 50%;
+  left: 0.6rem;
+  transform: translate(0%, -50%);
+  text-transform: uppercase;
+  font-family: Inter-Bold;
+  letter-spacing: 0.12rem;
+  font-size: 0.7rem;
+  color: #aaaaaa;
+  transition: all 0.3s ease; /* Add a smooth transition effect */
+}
+
+div input:focus + label,
+div input:not(:placeholder-shown) + label {
+  color: #333333;
+  transform: translate(0%, -350%);
+}
+
+input:focus {
+  outline-width: 2px;
+}
+
+input:not(:focus):not(:placeholder-shown):invalid {
+  border-bottom: rgba(204, 35, 35, 1) 2px solid;
+  background-color: rgba(204, 35, 35, 0.07);
+  color: rgba(204, 35, 35, 1);
+}
+
+input:not(:focus):not(:placeholder-shown):invalid + label {
+  color: rgba(204, 35, 35, 1);
+}
+
+input:not(:focus):not(:placeholder-shown):valid {
+  border-bottom: rgba(56, 132, 26, 1) 2px solid;
+}
+
+.button {
+  background-color: rgba(0, 0, 0, 0.02);
+}
+
+.button div {
+  background-image: url(https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  width: 12rem;
+  height: 4rem;
+  border-radius: 7.5px;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  margin: 2rem 3.5rem 1.5rem 3.5rem;
+  transition: 0.3s all ease;
+}
+
+.button span {
+  margin-left: 3.5rem;
+}
+
+.button a {
+  font-weight: bold;
+  color: rgb(56, 132, 26);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  user-select: none;
+  -webkit-user-select: none;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  border-radius: 7.5px;
+  font-family: Inter-Bold;
+  letter-spacing: -0.01rem;
+  font-size: 1.1rem;
+  font-weight: normal;
+  color: white;
+  backdrop-filter: blur(1rem);
+  -webkit-backdrop-filter: blur(1rem);
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+button:hover {
+  cursor: pointer;
+  backdrop-filter: blur(2rem) brightness(200%);
+  -webkit-backdrop-filter: blur(2rem) brightness(200%);
+}
+
+.button div:active {
+  transform: scale(0.98);
 }
