--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   src: url("./assets/Inter-Bold.ttf");
 }
 
+* {
+  border-style: unset;
+}
+
 body {
   cursor: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
@@ -60,7 +64,6 @@ section {
   grid-gap: 15px;
   align-items: center;
   width: 100%;
-
   padding-top: 250px;
 }
 
@@ -145,9 +148,12 @@ input {
   height: 3rem;
   width: 100%;
   border-radius: 5px;
-  border: transparent 2px solid;
-  background-color: rgba(0, 0, 0, 0.025);
-  padding: 0rem 1rem 0rem 0.5rem;
+  appearance: none;
+  border-style: unset;
+  border-bottom: transparent 1px solid;
+  background-color: rgba(0, 0, 0, 0.035);
+  padding: 0rem 2rem 0rem 1rem;
+  transition: all 0.3s ease;
 }
 
 label {
@@ -155,7 +161,7 @@ label {
   pointer-events: none;
   z-index: 3;
   top: 50%;
-  left: 0.6rem;
+  left: 1rem;
   transform: translate(0%, -50%);
   text-transform: uppercase;
   font-family: Inter-Bold;
@@ -168,15 +174,18 @@ label {
 div input:focus + label,
 div input:not(:placeholder-shown) + label {
   color: #333333;
-  transform: translate(0%, -350%);
+  transform: translate(0rem, -2.6rem);
 }
 
 input:focus {
-  outline-width: 2px;
+  outline-style: solid;
+  outline-width: 1px;
+  background-color: white;
 }
 
 input:not(:focus):not(:placeholder-shown):invalid {
-  border-bottom: rgba(204, 35, 35, 1) 2px solid;
+  border-radius: 5px 5px 0px 0px;
+  border-bottom: rgba(204, 35, 35, 1) 1px solid;
   background-color: rgba(204, 35, 35, 0.07);
   color: rgba(204, 35, 35, 1);
 }
@@ -186,7 +195,9 @@ input:not(:focus):not(:placeholder-shown):invalid + label {
 }
 
 input:not(:focus):not(:placeholder-shown):valid {
-  border-bottom: rgba(56, 132, 26, 1) 2px solid;
+  border-radius: 0px;
+  border-bottom: #333333 1px solid;
+  background-color: transparent;
 }
 
 .button {
@@ -211,10 +222,34 @@ input:not(:focus):not(:placeholder-shown):valid {
 }
 
 .button a {
+  display: inline-block;
   font-weight: bold;
   color: rgb(56, 132, 26);
   text-decoration: none;
   cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.button a::after {
+  display: block;
+  margin-top: 0.1rem;
+  content: "";
+  border-bottom: 3px solid rgba(56, 132, 26, 0.5);
+  transform: scaleX(0);
+  transition: transform 0.2s ease-in-out, border-bottom 0.2s ease-in-out;
+}
+
+.button a:hover::after {
+  border-bottom: 2px solid rgba(56, 132, 26, 1);
+}
+
+a.fromLeft::after {
+  transform-origin: 100% 50%;
+}
+
+a.fromLeft:hover::after {
+  transform: scaleX(1);
+  transform-origin: 0% 50%;
 }
 
 button {
@@ -242,6 +277,7 @@ button:hover {
   -webkit-backdrop-filter: blur(2rem) brightness(200%);
 }
 
-.button div:active {
-  transform: scale(0.98);
+button:active {
+  backdrop-filter: blur(2rem) brightness(300%);
+  -webkit-backdrop-filter: blur(2rem) brightness(300%);
 }
